Fix timeline tooltip dark mode color

--- a/public/timeline.less
+++ b/public/timeline.less
@@ -101,9 +101,21 @@
   border-color: @dark-border;
 }
 
+.dark .timeline__tick--selected {
+  background-color: @dark-bg-secondary;
+}
+
 .dark .timeline__tick--large:after,
 .dark .timeline__tick--small:after {
   background-color: #888;
+}
+
+.dark .timeline__tooltip {
+  background-color: @dark-bg-secondary;
+}
+
+.dark .timeline__tooltip:after {
+  background-color: @dark-bg-secondary;
 }
 
 @media screen and (orientation: portrait) {
